tests/vendor/valid/trivial/bitwise_or.c
//expect 3
//tags: trivial, bitwise, binary
int main() {
    return 1 | 2;
}