tests/vendor/invalid/syntax/bitwise_double_operator.c
//tags: trivial
int main() {
    return 1 | | 2; // this is "| |" not "||" and should result in an error
}